第一次上传

--- a/homework1/index.html
+++ b/homework1/index.html
@@ -309,10 +309,10 @@
 <body>
 	<div class="header">
 		<div class="logo">
-			<img src="images\1.gif" alt="图片错误">
+			<img src="images/1.gif" alt="图片错误">
 		</div>
 		<div class="search">
-			<img src="images\11.gif" alt="">
+			<img src="images/11.gif" alt="">
 		</div>
 		<div class="nav">
 			<ul>
@@ -329,7 +329,7 @@
 	</div>
 	<div class="banner">
 		<div class="picbox">
-			<img src="images\2.jpg" alt="图片错误">
+			<img src="images/2.jpg" alt="图片错误">
 		</div>		
 	</div>
 	<div class="container">
@@ -353,32 +353,32 @@
 		<div class="top-right">
 			<h3>人才招聘</h3>
 			<p>培养一流的人才</p>
-			<img src="images\3.gif" alt="图片错误">
+			<img src="images/3.gif" alt="图片错误">
 		</div>
 	</div>
 	<div class="bottom">
 		<h3>卧龙市场</h3>
 		<div class="piclist">
 			<div class="box1">
-				<img src="images\4.gif" alt="图片错误">
+				<img src="images/4.gif" alt="图片错误">
 				<p>
 					交通轨道:由于采用电气牵引，而且轨道摩擦力比较小与公共....
 				</p>
 			</div>
 			<div class="box2">
-				<img src="images\5.gif" alt="图片错误">
+				<img src="images/5.gif" alt="图片错误">
 				<p>
 					节能环保：由于不断上涨的能源消耗和我们的专业知识....
 				</p>
 			</div>
 			<div class="box3">
-				<img src="images\6.gif" alt="图片错误">
+				<img src="images/6.gif" alt="图片错误">
 				<p>
 					航空与船舰：如果你是在公海上行驶，你需要确保你的船只的电力系统....
 				</p>
 			</div>
 			<div class="box4">
-				<img src="images\7.gif" alt="图片错误">
+				<img src="images/7.gif" alt="图片错误">
 				<p>
 					石油、天然气及采矿 :在市场的安全行、可靠性、效率和最短的停机....
 				</p>
@@ -433,15 +433,15 @@
 			<div class="boxc">
 				<h3>营销网络</h3>			
 			</div>
-			<img src="images\8.jpg" alt="图片错误">
+			<img src="images/8.jpg" alt="图片错误">
 		</div>	
 		</div>
 		<div class="bottom">
 			<div class="boxm">
-			<img src="images\10.gif" alt="图片错误">
+			<img src="images/10.gif" alt="图片错误">
 			</div>
 			<div class="boxn">
-				<img src="images\9.gif" alt="图片错误">
+				<img src="images/9.gif" alt="图片错误">
 			</div>
 		</div>
 	</div>
